Fri Sep 16 12:47:10 CEST 2011 (acab)
------------------------------------
 * libclamav: properly pass custom flag to sigload_cb
 * c4w: honor custom sigs in mindefs
   (bb#3509 + bb#3510)

Thu Sep 15 14:44:11 CEST 2011 (tk)
----------------------------------
 * freshclam: fix pidfile removal (bb#3499)

Mon Sep 12 16:29:22 CEST 2011 (tk)
----------------------------------
 * freshclam: add new option PrivateMirror (bb#3058)

Sun Aug 21 17:05:24 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c:  fix incorrect blocking of some encrypted PDF with empty user passwords. (bb #3364)

Mon Aug  8 11:32:31 CEST 2011 (tk)
----------------------------------
 * freshclam: add new option --update-db

Wed Aug  3 15:41:28 CEST 2011 (tk)
----------------------------------
 * sigtool/sigtool.c: fix calculation of max signature length

Tue Aug  2 17:03:33 CEST 2011 (tk)
----------------------------------
 * docs: clarify behavior of --scan-*/Scan* options (bb#3134)

Mon Jul 25 16:09:19 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode_vm.c: fix opcode 20 error (bb #3100)

Mon Jul 25 14:33:59 CEST 2011 (acab)
------------------------------------
 * libclamav/matcher-hash.c: off by one read in cli_hm_scan (bb#2818)

Tue Jul 19 18:30:53 CEST 2011 (acab)
------------------------------------
 * libclamav/autoit.c: avoid dumping uninit data on autoit failure (bb#3051)

Thu Jul 14 12:29:17 EEST 2011 (edwin)
------------------------------------
 * libclamav/pdf.c: fix encrypted pdf detection (bb #2988)

Thu Jul 14 12:20:04 CEST 2011 (acab)
------------------------------------
 * clamav-milter/clamfi.c: fix typo in error message (bb#3040)

Thu Jul 14 12:07:04 CEST 2011 (acab)
------------------------------------
 * libclamav/lzma_iface.c: shut up huge alloc warns for 7z/lzma (bb#2913)

Thu Jun 30 14:24:34 EEST 2011 (edwin)
-------------------------------------
 * libclamav/c++/bytecode2llvm.cpp: fix use of unaddressable data in